--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 
 								<div class="widget clearfix">
 
-									<img src="images/footer-widget-logo.png" alt="Image" class="footer-logo">
+									<h3>Car Party</h3>
 
 									<p>Twoje <strong>bezpieczeństwo</strong>, jest dla nas
 										<strong>najważniejsze.</strong>
@@ -630,9 +630,9 @@
 											ul. Spółdzielców 12, mieszkanie 54<br>
 											Kraków, Małopolska 30-682<br>
 										</address>
-										<abbr title="Phone Number"><strong>Telefon 1:</strong></abbr> (+48) 555 555
+										<abbr title="Phone Number 1"><strong>Telefon 1:</strong></abbr> (+48) 555 555
 										555<br>
-										<abbr title="Fax"><strong>Telefon 2:</strong></abbr> (+48) 777 777 777<br>
+										<abbr title="Phone number 2"><strong>Telefon 2:</strong></abbr> (+48) 777 777 777<br>
 										<abbr title="Email Address"><strong>Email:</strong></abbr> info@carparty.pl
 									</div>
 
