--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
 
 				<!-- About Section
 				============================================= -->
-				<div id="about" class="m-0 bg-transparent page-section" style="padding-top: 150px">
+				<div class="m-0 bg-transparent page-section" style="padding-top: 150px">
+					<a class="anchor" id="about"></a>
 					<div class="container clearfix">
 						<div class="row clearfix">
 							<div class="col-md-3 col-6 d-none d-md-block">
@@ -217,7 +218,8 @@
 
 				<div class="line"></div>
 
-				<div class="container clearfix bottommargin" id="oferta">
+				<div class="container clearfix bottommargin">
+					<a class='anchor' id="oferta"></a>
 					<div class="row col-mb-50">
 
 						<div class="col-sm-6 col-lg-4">
@@ -306,7 +308,8 @@
 					data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
 				</div>
 
-				<div id="cennik" class="container bottommargin dark clearfix" style="margin-top: -500px">
+				<div class="container bottommargin dark clearfix" style="margin-top: -500px">
+					<a class='anchor' id="cennik"></a>
 					<div class=" heading-block bottommargin-lg center clearfix" style="text-shadow: 1px 1px 1px rgba(0,0,0,0.2);">
 						<img src="images/wallet.svg" alt="Image" height="40" style="margin-bottom: 20px">
 						<h2 class="text-shadow">Cennik</h2>
@@ -470,7 +473,8 @@
 
 			</div>
 			<div class="line"></div>
-			<div id="regulamin" class="container">
+			<div class="container">
+				<a class='anchor' id="regulamin"></a>
 
 				<div class="col-md-12">
 
