--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 								<div class="heading-block bottommargin-sm">
 									<h2>O nas</h2>
 								</div>
-								<p>Jesteśmy nową alternatywa na Krakowskim rynku przewozu osób oraz ich samochodów.
+								<p>Jesteśmy nową alternatywa na krakowskim rynku przewozu osób oraz ich samochodów.
 									Jeśli nie czujesz się na siłach by wrócić samochodem do domu, wypiłeś alkohol, źle
 									się czujesz i potrzebujesz by ktoś wrócił nim razem z Tobą i wyręczył Cię w
 									prowadzeniu go... Idealnie trafiłeś do Car Party! Nasze usługi polegają na
