--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 						<!-- Logo
 						============================================= -->
 						<div id="logo">
-							<!-- <a href="index.html" class="standard-logo" data-dark-logo="images/logo.png"><img
-									src="images/logo.png" alt="Canvas Logo"></a> -->
+							<a href="index.html" class="standard-logo" data-dark-logo="images/logo.png"><img
+									src="images/logo.png" alt="Logo"></a>
 									<a  href="#header">
 
 										<h3 style="margin-bottom: 0;">Car Party</h3>
@@ -375,7 +375,7 @@
 								<div class="price-dots">
 									<span class="separator-dots"></span>
 								</div>
-								<div class="price-price color">5zł</div>
+								<div class="price-price color">10zł</div>
 							</div>
 							<p class="price-desc">Pierwsze 10 minut oczekiwania na klienta jest darmowe.</p>
 						</div>
