--- a/index.html
+++ b/index.html
@@ -200,12 +200,13 @@
 							<div class="heading-block bottommargin-sm">
 								<h2>O nas</h2>
 							</div>
-							<p>Jesteśmy nową alternatywa na krakowskim rynku przewozu osób oraz ich samochodów.
+							<p>Jesteśmy nową alternatywą na krakowskim rynku przewozu osób oraz ich samochodów.
 								Jeśli nie czujesz się na siłach by wrócić samochodem do domu, wypiłeś alkohol, źle
 								się czujesz i potrzebujesz by ktoś wrócił nim razem z Tobą i wyręczył Cię w
 								prowadzeniu go... Idealnie trafiłeś do Car Party! Nasze usługi polegają na
 								odwiezieniu Twojego auta bezpiecznie pod wskazany adres.</p>
 							<img src="images/logo-full.svg" alt="Image" width="350">
+							
 						</div>
 						<div class="col-md-3 col-6 d-none d-md-block">
 							<img src="images/about2.jpg" alt="Image">
@@ -456,22 +457,21 @@
 							<div class="price-dots">
 								<span class="separator-dots"></span>
 							</div>
-							<div class="price-price color">1000zł</div>
+							<div class="price-price color">1200zł</div>
 						</div>
 					</div>
 
 					<div class="w-100 clear"></div>
 
 					<div class="price color text-smaller">
-						<p>*ceny usług niewymienionych w cenniku ustalamy indywidualnie dla klienta. </br>
-							**wystawiamy fakturę VAT</p>
+						<p>*Ceny usług niewymienionych w cenniku ustalamy indywidualnie dla klienta. </br>
+							**Korzystając z naszych usług akceptują państwo regulamin.</p>
 					</div>
 
 				</div>
 
 
 			</div>
-			<div class="line"></div>
 			<div class="container">
 				<a class='anchor' id="regulamin"></a>
 
@@ -545,58 +545,19 @@
 
 				</div>
 			</div>
-			<div class="line"></div>
 
 			<div id="oc-clients-full" class="owl-carousel image-carousel carousel-widget" data-margin="100"
 				data-nav="false" data-loop="true" data-autoplay="5000" data-pagi="false" data-items-xs="1"
 				data-items-sm="1" data-items-md="2" data-items-lg="3" data-items-xl="3" data-stage-padding="50">
 
-				<div class="oc-item">
-					<div class="feature-box testimonial fbox-center fbox-bg">
-						<div class="fbox-icon">
-							<a href="#"><img src="images/clients/1.jpg" alt="Featured Box Image"></a>
-						</div>
-						<div class="fbox-content">
-							<h4 class="mb-0"><a class="text-dark" href="#">Marco</a></h4>
-							<p class="text-smaller font-primary font-italic mb-0">"Chłop mnie tak przewiózł że dalej
-								suty stoją."</p>
-						</div>
-					</div>
-				</div>
-				<div class="oc-item">
-					<div class="feature-box testimonial fbox-center fbox-bg">
-						<div class="fbox-icon">
-							<a href="#"><img src="images/clients/2.jpg" alt="Featured Box Image"></a>
-						</div>
-						<div class="fbox-content">
-							<h4 class="mb-0"><a class="text-dark" href="#">Marcel</a></h4>
-							<p class="text-smaller font-primary font-italic mb-0">"Zatwierdzam."</p>
-						</div>
-					</div>
-				</div>
-				<div class="oc-item">
-					<div class="feature-box testimonial fbox-center fbox-bg">
-						<div class="fbox-icon">
-							<a href="#"><img src="images/clients/3.jpg" alt="Featured Box Image"></a>
-						</div>
-						<div class="fbox-content">
-							<h4 class="mb-0"><a class="text-dark" href="#">Dominik</a></h4>
-							<p class="text-smaller font-primary font-italic mb-0">"Ebe ebe."</p>
-						</div>
-					</div>
-				</div>
-				<div class="oc-item">
-					<div class="feature-box testimonial fbox-center fbox-bg">
-						<div class="fbox-icon">
-							<a href="#"><img src="images/clients/4.jpg" alt="Featured Box Image"></a>
-						</div>
-						<div class="fbox-content">
-							<h4 class="mb-0"><a class="text-dark" href="#">Baśka</a></h4>
-							<p class="text-smaller font-primary font-italic mb-0">"Zajebisty kierowca w chuj."</p>
-						</div>
-					</div>
-				</div>
-
+				<img src="images/cars/1.jpg">
+				<img src="images/cars/2.jpg">
+				<img src="images/cars/3.jpg">
+				<img src="images/cars/4.jpg">
+				<img src="images/cars/5.jpg">
+				<img src="images/cars/6.jpg">
+				<img src="images/cars/7.jpg">
+				<img src="images/cars/8.jpg">
 			</div>
 
 
@@ -633,21 +594,18 @@
 										style="background: url('images/world-map.png') no-repeat center center; background-size: 100%;">
 										<address>
 											<strong>Siedziba:</strong><br>
-											ul. Spółdzielców 12, mieszkanie 54<br>
 											Kraków, Małopolska 30-682<br>
 										</address>
-										<abbr title="Phone Number 1"><strong>Telefon 1:</strong></abbr> (+48) 555 555
-										555<br>
-										<abbr title="Phone number 2"><strong>Telefon 2:</strong></abbr> (+48) 777 777
-										777<br>
-										<abbr title="Email Address"><strong>Email:</strong></abbr> info@carparty.pl
+										<abbr title="Phone Number 1"><strong>Telefon 1:</strong></abbr> (+48) 507 834 505<br>
+										<abbr title="Phone number 2"><strong>Telefon 2:</strong></abbr> (+48) 507 837 133<br>
+										<abbr title="Email Address"><strong>Email:</strong></abbr> infocarparty@gmail.com
 									</div>
 
 								</div>
 
 							</div>
 
-
+							<img class="second-logo" src="images/logo.png" alt="Image">
 						</div>
 
 					</div>
@@ -714,7 +672,7 @@
 														nas</strong><br>na Facebooku</small></a>
 										</div>
 										<div class="col-6 col-md-12 col-lg-6 clearfix">
-											<a href="#" class="social-icon si-dark si-colored si-instagram mb-0"
+											<a href="https://www.instagram.com/paprykgrubalyda" target="_blank" class="social-icon si-dark si-colored si-instagram mb-0"
 												style="margin-right: 10px;">
 												<i class="icon-instagram"></i>
 												<i class="icon-instagram"></i>
