--- a/index.html
+++ b/index.html
@@ -662,17 +662,8 @@
 								<div class="widget clearfix" style="margin-bottom: -20px;">
 
 									<div class="row">
-										<div class="col-6 col-md-12 col-lg-6 clearfix bottommargin-sm">
-											<a href="#" class="social-icon si-dark si-colored si-facebook mb-0"
-												style="margin-right: 10px;">
-												<i class="icon-facebook"></i>
-												<i class="icon-facebook"></i>
-											</a>
-											<a href="#"><small style="display: block; margin-top: 3px;"><strong>Polub
-														nas</strong><br>na Facebooku</small></a>
-										</div>
 										<div class="col-6 col-md-12 col-lg-6 clearfix">
-											<a href="https://www.instagram.com/paprykgrubalyda" target="_blank" class="social-icon si-dark si-colored si-instagram mb-0"
+											<a href="https://www.instagram.com/carparty_official" target="_blank" class="social-icon si-dark si-colored si-instagram mb-0"
 												style="margin-right: 10px;">
 												<i class="icon-instagram"></i>
 												<i class="icon-instagram"></i>
