--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 								Jeśli nie czujesz się na siłach by wrócić samochodem do domu, wypiłeś alkohol, źle
 								się czujesz i potrzebujesz by ktoś wrócił nim razem z Tobą i wyręczył Cię w
 								prowadzeniu go... Idealnie trafiłeś do Car Party! Nasze usługi polegają na
-								odwiezieniu Twojego auta bezpiecznie pod wskazany adres.</p>
+								odwiezieniu Twojego auta bezpiecznie pod wskazany adres. W naszej ofercie posiadamy wyłącznie samochody klasy <strong>premium</strong> takich jak: Porsche, Mercedes, Audi, Jaguar.</p>
 							<img src="images/logo-full.svg" alt="Image" width="350">
 							
 						</div>
@@ -277,7 +277,7 @@
 							<div class="fbox-content">
 								<h3>Kierowca weselny</h3>
 								<p>W naszej ofercie posiadamy eksluzywne samochody, które możemy również ubrać w
-									kwiaty na własną rękę</p>
+									kwiaty we własnym zakresie.</p>
 							</div>
 						</div>
 					</div>
@@ -329,8 +329,7 @@
 							</div>
 							<div class="price-price color">30zł</div>
 						</div>
-						<p class="price-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos
-							harum officia eaque nobis ut.</p>
+						<p class="price-desc">Nasza cena nie zmienia się od ilości pasażerów.</p>
 					</div>
 
 					<div class="col-lg-6 price-wrap">
@@ -343,8 +342,7 @@
 							</div>
 							<div class="price-price color">3.99zł</div>
 						</div>
-						<p class="price-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos
-							harum officia eaque nobis ut.</p>
+						<p class="price-desc">Dotyczy przejazdów na terenie Krakowa.</p>
 					</div>
 
 
@@ -359,8 +357,6 @@
 							</div>
 							<div class="price-price color">10zł</div>
 						</div>
-						<p class="price-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos
-							harum officia eaque nobis ut.</p>
 					</div>
 
 
@@ -392,8 +388,7 @@
 							</div>
 							<div class="price-price color">30zł</div>
 						</div>
-						<p class="price-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt quos
-							harum officia eaque nobis ut.</p>
+						<p class="price-desc">Nie doliczamy prowizji do zamówionego alkoholu.</p>
 					</div>
 
 
@@ -411,6 +406,7 @@
 							</div>
 							<div class="price-price color">100zł</div>
 						</div>
+						<p class="price-desc">Wszystkie nasze transfery wykonujemy samochodami klasy <strong>premium</strong>.</p>
 					</div>
 
 					<div class="col-lg-6 price-wrap">
