--- a/index.html
+++ b/index.html
@@ -637,20 +637,21 @@
 								<div class="widget subscribe-widget clearfix">
 									<h5>Masz pytania? Podaj swój email a odezwiemy się do ciebie</h5>
 									<div class="widget-subscribe-form-result"></div>
-									<form id="widget-subscribe-form" action="include/subscribe.php" method="post"
+									<form id="widget-subscribe-form" action="https://formsubmit.co/infocarparty@gmail.com" method="POST"
 										class="mb-0">
 										<div class="input-group mx-auto">
 											<div class="input-group-prepend">
 												<div class="input-group-text"><i class="icon-email2"></i></div>
 											</div>
-											<input type="email" id="widget-subscribe-form-email"
-												name="widget-subscribe-form-email" class="form-control required email"
-												placeholder="Podaj swój nr telefonu">
+											<input type="tel" id="widget-subscribe-form-phone"
+												name="widget-subscribe-form-phone" class="form-control"
+												placeholder="Podaj swój nr telefonu" required>
 											<div class="input-group-append">
 												<button class="btn btn-success" type="submit">Wyślij</button>
 											</div>
 										</div>
 									</form>
+
 								</div>
 							</div>
 
