--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
 								<div class="widget subscribe-widget clearfix">
 									<h5>Masz pytania? Podaj swój email a odezwiemy się do ciebie</h5>
 									<div class="widget-subscribe-form-result"></div>
-									<form id="widget-subscribe-form" action="https://formsubmit.co/7e3a0b7233ac11b4ba5c878c8d4d6200" method="POST"
+									<form targe="_blank" id="widget-subscribe-form" action="https://formsubmit.co/7e3a0b7233ac11b4ba5c878c8d4d6200" method="POST"
 										class="mb-0">
 										<div class="input-group mx-auto">
 											<div class="input-group-prepend">
