--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 											</div>
 											<input type="tel" id="widget-subscribe-form-phone"
 												name="widget-subscribe-form-phone" class="form-control"
-												placeholder="Podaj swój nr telefonu2" required>
+												placeholder="Podaj swój nr telefonu" required>
 											<div class="input-group-append">
 												<button class="btn btn-success" type="submit">Wyślij</button>
 											</div>
