--- a/index.html
+++ b/index.html
@@ -639,6 +639,7 @@
 									<div class="widget-subscribe-form-result"></div>
 									<form target="_blank" id="widget-subscribe-form" action="https://formsubmit.co/7e3a0b7233ac11b4ba5c878c8d4d6200" method="POST"
 										class="mb-0">
+										<input type="hidden" name="_captcha" value="false">
 										<div class="input-group mx-auto">
 											<div class="input-group-prepend">
 												<div class="input-group-text"><i class="icon-email2"></i></div>
