--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 												placeholder="Podaj swój nr telefonu" required>
 											<div class="input-group-append">
 												<!-- <button class="btn btn-success" type="submit">Wyślij</button> -->
-												<button class="g-recaptcha" data-sitekey="reCAPTCHA_site_key"
+												<button class="btn btn-success g-recaptcha" data-sitekey="6LdX6KUaAAAAAJZHDFD8qm9d__UzEJAps47JP3PR"
 													data-callback='onSubmit' data-action='submit'>Submit</button>
 											</div>
 										</div>
