--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 	<script src="https://www.google.com/recaptcha/api.js"></script>
 	<script>
 		function onSubmit(token) {
-			document.getElementById("demo-form").submit();
+			document.getElementById("widget-subscribe-form").submit();
 		}
 	</script>
 
