--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 								<div class="widget subscribe-widget clearfix">
 									<h5>Masz pytania? Podaj swój email a odezwiemy się do ciebie</h5>
 									<div class="widget-subscribe-form-result"></div>
-									<form target="_blank" id="widget-subscribe-form"
+									<form id="widget-subscribe-form"
 										action="https://formsubmit.co/7e3a0b7233ac11b4ba5c878c8d4d6200" method="POST"
 										class="mb-0">
 										<input type="hidden" name="_captcha" value="false">
