--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 											<div class="input-group-append">
 												<!-- <button class="btn btn-success" type="submit">Wyślij</button> -->
 												<button class="btn btn-success g-recaptcha" data-sitekey="6LdX6KUaAAAAAKiy-0ChqvrtrDFWI8wkKFKB0EYC"
-													data-callback='onSubmit' data-action='submit'>Submit</button>
+													data-callback='onSubmit' data-action='submit'>Wyślij</button>
 											</div>
 										</div>
 									</form>
