--- a/index.html
+++ b/index.html
@@ -724,6 +724,7 @@
 	<script>
 		function onSubmit(token) {
 			document.getElementById("widget-subscribe-form").submit();
+			document.getElementById("widget-subscribe-form").reset();
 		}
 	</script>
 
